# ChangeLog for sci-chemistry/pymol
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jul 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Fx stupid argparse import

  26 Jun 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Update repo uri

  25 Mar 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild, metadata.xml:
  Sync with tree

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Fix missing DOCTYPE

  18 Feb 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Fix sed syntax

  18 Feb 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Fix sed syntax

  18 Feb 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild,
  -files/pymol-9999-flags.patch, -files/pymol-9999-prefix.patch, metadata.xml:
  Adapt to current HEAD

  15 Feb 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild,
  -files/pymol-9999-data-path.patch, files/pymol-9999-flags.patch,
  -files/pymol-9999-nosplash.patch, files/pymol-9999-prefix.patch,
  -files/pymol-9999-setup.py.patch, -files/pymol-9999-vmd.patch,
  -files/pymol-9999-web.patch, metadata.xml:
  adopt to current HEAD

  29 Jan 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild, metadata.xml:
  Bump python eclass

  15 Oct 2012; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Add mime type definition

  12 Aug 2012; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Correct Desktop entry

  02 May 2012; Justin Lecher <jlec@gentoo.org> files/pymol-9999-web.patch:
  Fix for latest HEAD

  29 Mar 2012; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Add new icon files provided by Ramiro Téllez Sanz

  29 Mar 2012; Justin Lecher <jlec@gentoo.org>
  files/pymol-9999-data-path.patch:
  Import tree changes

  04 Mar 2012; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
  Block pypy usage

  19 Feb 2012; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild,
  files/pymol-9999-prefix.patch, files/pymol-9999-web.patch: