@@ -1,1 +1,1 @@
-DIST pymol-icons.tar.xz 38100 SHA256 03500f28256f67abfbb7d08b798b11aaa208f0ae1473ef2a7205b3c012ddb06a SHA512 5af51014d4fcbc85ef1fecd7667224709c9305b9b72bfdfd89ece2b4420fa8a81bf8c85fcc5903e2a670f44403f12764808f6a16ef42f111bbd0e7ed8e412d54 WHIRLPOOL 6104d378928c56b39f8cbe29184629b73f87da09e81e41ddc08b9b291876f1a30ccaf9ec257f47798c6d03253816f80c14567073c419fa48dd1520fa3fa58ecd
+DIST pymol-1.7.0.0.png.xz 5392 SHA256 4c554a5c4f47946b6f7bae00209d5116305162534292735d30ae0794c56a8a0b SHA512 24bb1584b28688f5d5824e938f8500ca9887838adf490b4284c52f8c0da4c5ec4a56051ee80f48e4f34541ab53f9a4e00c849c382f1fd37c232fbea12d700105 WHIRLPOOL 395f978eb9ea3a8f8f39bf0694f71986ac9f8ebb307b90283c53fed85c4412d84e54af472f8646fcbd99c650039cb395a8f02b281168802c73ddb9bad175512b
