@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/pymol
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  15 Jan 2014; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
+  Merge tree changes
 
   24 Jul 2013; Justin Lecher <jlec@gentoo.org> pymol-9999.ebuild:
   Fx stupid argparse import
